# unity-acl

./: .gitignore  .gitmodules
Assets/ACL/: ACLBinding.cs  ACLWrapper.cs  ReadTest.cs
Assets/ACL/Editor/: Animation2ACL.cs  ReadTest.cs
Assets/Scenes/: ACLPlayableTest.unity  AnimationPlayableTest.unity  PlayableTest.unity  PlayableTestSettings.lighting
Assets/UnityChan/Animations/: unitychan_DAMAGED00@DAMAGED00.bytes  unitychan_DAMAGED01@DAMAGED01.bytes  unitychan_HANDUP00_R@HANDUP00_R.bytes  unitychan_JUMP00@JUMP00.bytes  unitychan_JUMP00B@JUMP00B.bytes
Assets/UnityChan/Animators/: UnityChanActionCheck.controller
Assets/UnityChan/Scenes/: ActionCheck.unity
Assets/UnityChan/Scripts/: ACLJob.cs  ACLTest.cs  ControlManager.cs  FaceUpdate.cs  IPlayBy.cs  PlayByACL.cs  PlayByAnimation.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UserSettings/: EditorUserSettings.asset
acl_unity/: CMakeLists.txt  fbx2acl_py2.py  main.cpp
